--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -46,12 +46,12 @@ pagehelper:
   supportMethodsArguments: true
   params: count=countSql
 
-logging:
-  level:
-   com:
-    chuncongcong:
-     productmgmt:
-      dao: debug
+#logging:
+#  level:
+#   com:
+#    chuncongcong:
+#     productmgmt:
+#      dao: debug
 
 app:
   id: wx2830175c9fa7e38e
