--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -46,17 +46,14 @@ pagehelper:
   supportMethodsArguments: true
   params: count=countSql
 
-
-#logging:
-#  level:
-#   com:
-#    chuncongcong:
-#     productmgmt:
-#      dao: debug
-
 app:
   id: wx2830175c9fa7e38e
   secret: 38d3fa244261c51f7009192fbb4809d8
 logging:
   file:
     path: /root/logs/product_mgmt_log
+  level:
+    com:
+      chuncongcong:
+        productmgmt:
+          dao: debug
