用户增加判空 开启debug模式

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -52,8 +52,8 @@ app:
 logging:
   file:
     path: /root/logs/product_mgmt_log
-#  level:
-#    com:
-#      chuncongcong:
-#        productmgmt:
-#          dao: debug
+  level:
+    com:
+      chuncongcong:
+        productmgmt:
+          dao: debug
