--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -52,11 +52,11 @@ app:
 logging:
   file:
     path: /root/logs/product_mgmt_log
-  level:
-    com:
-      chuncongcong:
-        productmgmt:
-          dao: debug
+#  level:
+#    com:
+#      chuncongcong:
+#        productmgmt:
+#          dao: debug
 
 request:
   log:
