--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -9,8 +9,8 @@ spring:
   aop:
     proxy-target-class: true
   datasource:
-    url: jdbc:mysql://120.79.210.91:3306/product_mgmt?useUnicode=true&characterEncoding=utf8&useSSL=false&serverTimezone=Asia/Shanghai
-    password: 123456
+    url: jdbc:mysql://42.192.123.176:3306/product_mgmt?useUnicode=true&characterEncoding=utf8&useSSL=false&serverTimezone=Asia/Shanghai
+    password: YYyy0429
     username: root
     driver-class-name: com.mysql.jdbc.Driver
     type: com.zaxxer.hikari.HikariDataSource
@@ -23,7 +23,7 @@ spring:
       max-lifetime: 60000
   redis:
     port: 6379
-    host: 120.79.210.91
+    host: 42.192.123.176
     database: 0
     timeout: 10000
     lettuce:
