--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -9,9 +9,9 @@ spring:
   aop:
     proxy-target-class: true
   datasource:
-    url: jdbc:mysql://42.192.123.176:3306/product_mgmt?useUnicode=true&characterEncoding=utf8&useSSL=false&serverTimezone=Asia/Shanghai
-    password: YYyy0429
-    username: root
+    url: jdbc:mysql://ENC(SGOqglPaE1dUyjjA3EEyyMAtiw8oeIhu):3306/product_mgmt?useUnicode=true&characterEncoding=utf8&useSSL=false&serverTimezone=Asia/Shanghai
+    password: ENC(pfnBfUXIfcKWjiNJQNgJ29lEYfQ2AZ5w)
+    username: ENC(AkL48Oi3cR5nLEjZJ3Y32Q==)
     driver-class-name: com.mysql.jdbc.Driver
     type: com.zaxxer.hikari.HikariDataSource
     hikari:
@@ -23,7 +23,7 @@ spring:
       max-lifetime: 60000
   redis:
     port: 6379
-    host: 42.192.123.176
+    host: ENC(SGOqglPaE1dUyjjA3EEyyMAtiw8oeIhu)
     database: 0
     timeout: 10000
     lettuce:
@@ -32,7 +32,7 @@ spring:
         max-active: 8
         max-idle: 8
         min-idle: 0
-    password: YYyy0429
+    password: ENC(pfnBfUXIfcKWjiNJQNgJ29lEYfQ2AZ5w)
 
 mybatis:
   mapper-locations: classpath:mapper/*.xml
@@ -64,3 +64,4 @@ logging:
 request:
   log:
     enable: false
+
