--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -42,6 +42,7 @@ mybatis:
   configuration:
     cache-enabled: true
     use-generated-keys: true
+    map-underscore-to-camel-case: true
 
 #分页设置
 pagehelper:
