--- a/pom.xml
+++ b/pom.xml
@@ -144,6 +144,7 @@
 	</dependencies>
 
 	<build>
+		<finalName>product-mgmt</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
